# vyos-cfg-avahi

./: .gitignore  Makefile.am  README  configure.ac
debian/: README  changelog  control  copyright  rules
scripts/: ubnt-mdns-repeater.pl
src/: mdns-repeater.c
templates-cfg/service/mdns/: node.def
templates-cfg/service/mdns/reflector/: node.def
templates-cfg/service/mdns/repeater/: node.def
templates-cfg/service/mdns/repeater/interface/: node.def
